Improve guardian config.